Add start script to package.json

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Task of GUVI with fs module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "author": "Sarasraman",
   "license": "ISC",
